--- a/common/transport/pom.xml
+++ b/common/transport/pom.xml
@@ -3,18 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>aurora-blue</artifactId>
+        <artifactId>common</artifactId>
         <groupId>com.tyan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common</artifactId>
+    <artifactId>transport</artifactId>
     <packaging>pom</packaging>
-    <modules>
-        <module>transport</module>
-        <module>core</module>
-        <module>connection</module>
-    </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.tyan</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
