--- a/common/connection/pom.xml
+++ b/common/connection/pom.xml
@@ -11,14 +11,6 @@
 
     <artifactId>connection</artifactId>
 
-    <properties>
-        <apache.http.version>4.5.3</apache.http.version>
-        <javax.websocket.version>1.1</javax.websocket.version>
-        <tyrus.client.version>1.1</tyrus.client.version>
-        <tyrus.container.grizzly.version>1.1</tyrus.container.grizzly.version>
-        <eclipse.jetty.version>9.0.0.M0</eclipse.jetty.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.tyan</groupId>
@@ -26,29 +18,9 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>${apache.http.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.websocket</groupId>
-            <artifactId>javax.websocket-client-api</artifactId>
-            <version>${javax.websocket.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.tyrus</groupId>
-            <artifactId>tyrus-client</artifactId>
-            <version>${tyrus.client.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.glassfish.tyrus</groupId>
-            <artifactId>tyrus-container-grizzly</artifactId>
-            <version>${tyrus.container.grizzly.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty.websocket</groupId>
-            <artifactId>websocket-client</artifactId>
-            <version>9.4.7.RC0</version>
+            <groupId>com.tyan</groupId>
+            <artifactId>external</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
