--- a/common/transport/pom.xml
+++ b/common/transport/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.tyan</groupId>
+            <artifactId>external</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
