--- a/external/pom.xml
+++ b/external/pom.xml
@@ -16,6 +16,8 @@
         <javax.websocket.version>1.1</javax.websocket.version>
         <tyrus.client.version>1.1</tyrus.client.version>
         <tyrus.container.grizzly.version>1.1</tyrus.container.grizzly.version>
+        <chronicle.queue.version>4.6.75</chronicle.queue.version>
+        <jetty.websocket.version>9.4.7.RC0</jetty.websocket.version>
         <eclipse.jetty.version>9.0.0.M0</eclipse.jetty.version>
     </properties>
 
@@ -48,7 +50,12 @@
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
             <artifactId>websocket-client</artifactId>
-            <version>9.4.7.RC0</version>
+            <version>${jetty.websocket.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.openhft</groupId>
+            <artifactId>chronicle-queue</artifactId>
+            <version>${chronicle.queue.version}</version>
         </dependency>
     </dependencies>
 
