--- a/common/marketdata/pom.xml
+++ b/common/marketdata/pom.xml
@@ -9,12 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>transport</artifactId>
+    <artifactId>marketdata</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.tyan</groupId>
             <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tyan</groupId>
+            <artifactId>connection</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
