--- a/external/pom.xml
+++ b/external/pom.xml
@@ -19,13 +19,35 @@
         <chronicle.queue.version>4.6.75</chronicle.queue.version>
         <jetty.websocket.version>9.4.7.RC0</jetty.websocket.version>
         <eclipse.jetty.version>9.0.0.M0</eclipse.jetty.version>
+        <gson.version>2.8.2</gson.version>
+        <lmax.version>3.4.2</lmax.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.tyan</groupId>
+            <artifactId>connection</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tyan</groupId>
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tyan</groupId>
+            <artifactId>marketdata</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tyan</groupId>
+            <artifactId>transport</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>${lmax.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -41,6 +63,11 @@
             <groupId>org.glassfish.tyrus</groupId>
             <artifactId>tyrus-client</artifactId>
             <version>${tyrus.client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish.tyrus</groupId>
