--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>common</module>
         <module>external</module>
+        <module>app</module>
     </modules>
 
     <properties>
