--- a/app/market-data/pom.xml
+++ b/app/market-data/pom.xml
@@ -14,17 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.tyan</groupId>
-            <artifactId>marketdata</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.tyan</groupId>
-            <artifactId>connection</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.tyan</groupId>
-            <artifactId>transport</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
