--- a/external/pom.xml
+++ b/external/pom.xml
@@ -26,22 +26,7 @@
     <dependencies>
         <dependency>
             <groupId>com.tyan</groupId>
-            <artifactId>connection</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.tyan</groupId>
-            <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.tyan</groupId>
-            <artifactId>marketdata</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.tyan</groupId>
-            <artifactId>transport</artifactId>
+            <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
