refactored external module to be called core module

--- a/app/market-data/pom.xml
+++ b/app/market-data/pom.xml
@@ -19,7 +19,7 @@
         </dependency>
         <dependency>
             <groupId>com.tyan</groupId>
-            <artifactId>external</artifactId>
+            <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
