--- a/core/pom.xml
+++ b/core/pom.xml
@@ -21,6 +21,7 @@
         <eclipse.jetty.version>9.0.0.M0</eclipse.jetty.version>
         <gson.version>2.8.2</gson.version>
         <lmax.version>3.4.2</lmax.version>
+        <carrot.version>0.8.1</carrot.version>
     </properties>
 
     <dependencies>
@@ -33,6 +34,11 @@
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
             <version>${lmax.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.carrotsearch</groupId>
+            <artifactId>hppc</artifactId>
+            <version>${carrot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
